--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -124,13 +124,13 @@
 
   .namepos {
     height: 25%;
-    width: 66%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
     margin: auto;
     background-color: black;
-    border-radius: 15px;
+    /*border-radius: 15px;*/
     opacity: .9;
     text-align: center;
   }
@@ -264,6 +264,7 @@
   #starwars {
     background-image: url("./imgs/starwars.png");
     background-size: cover;
+    border-radius: 15px 0 0 0;
   }
 
   #subaru {
@@ -274,6 +275,7 @@
   #rockshowZ {
     background-image: url("./imgs/rockshow.png");
     background-size: cover;
+    border-radius: 0 15px 0 0;
   }
 
   .projcon {
