--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -122,7 +122,7 @@
 
   .namepos {
     height: 25%;
-    width: 66%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -264,6 +264,7 @@
   #starwars {
     background-image: url("./imgs/starwars.png");
     background-size: cover;
+    border-radius: 15px 0 0 0;
   }
 
   #subaru {
@@ -274,6 +275,7 @@
   #rockshowZ {
     background-image: url("./imgs/rockshow.png");
     background-size: cover;
+    border-radius: 0 15px 0 0;
   }
 
   .projcon {
