--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -128,7 +128,7 @@
     position: relative;
     margin: auto;
     background-color: black;
-    border-radius: 15px;
+    border-radius: 0;
     opacity: .9;
     text-align: center;
   }
