--- a/styles/styles.css
+++ b/styles/styles.css
@@ -129,7 +129,7 @@
     position: relative;
     margin: auto;
     background-color: black;
-    /*border-radius: 15px;*/
+    border-radius: 0;
     opacity: .9;
     text-align: center;
   }
