--- a/views/home.html
+++ b/views/home.html
@@ -10,8 +10,12 @@
       <h1 class="titles">About</h1>
       <div class="aboutcon">
       <p><a href="https://devmountain.com"><span>#DevMountain</span></a> graduate ready to get to work!</p>
+      <!-- <h1><hr></h1> -->
       <p><a href="https://twitter.com/statemaryland?lang=en"><img src="styles/imgs/maryland.png" class="md"></a><a href="https://twitter.com/statemaryland?lang=en">@Maryland</a> born and raised</p>
-      <p></p>
+      <!-- <h1><hr></h1> -->
+      <p><a href="https://www.subaru.com"><span>#Subaru</span></a> Enthusiast! </p>
+
+      <p>Food lover who sometimes post on <a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p>
       </div>
     </div>
     <div id="skills" class="sec2 sec">
