--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -341,11 +341,17 @@
     /*text-align: center;*/
   }
 
+  .starcov {
+    border-radius: 15px 0 0 0;
+    background-color: green
+  }
+
   .projcover:hover {
     transition-property: opacity;
     transition-duration: 1s;
     opacity: .7
   }
+
 
   #contact {
     height: 80vh;
