--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
       <!-- <h1><hr></h1> -->
       <p><a href="https://www.subaru.com"><span>#Subaru</span></a> Enthusiast! </p>
 
-      <p>Food lover who sometimes post on <a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p>
+      <p>Food lover <a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p>
       </div>
     </div>
     <div id="skills" class="sec2 sec">
@@ -42,7 +42,7 @@
       <div class="projcon">
         <div id="starpro" class="project">
           <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
-            <div id="starwars" class="projimg"><div class="projcover"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
+            <div id="starwars" class="projimg"><div class="projcover starcov"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
           <h1 class="pronam">Star Wars Planets</h1>
         </div>
         <div id="subpro" class="project">
@@ -52,7 +52,7 @@
         </div>
         <div id="rockpro" class="project">
           <a href="http://138.68.60.37:8081">
-            <div id="rockshowZ" class="projimg"><div class="projcover"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
+            <div id="rockshowZ" class="projimg"><div class="projcover rockcov"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
           <h1 class="pronam">RockshowZ</h1>
         </div>
       </div>
