--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
       <!-- <h1><hr></h1> -->
       <p><a href="https://www.subaru.com"><span>#Subaru</span></a> Enthusiast! </p>
 
-      <p>Food lover <a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p>
+      <!-- <p>Food lover <a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p> -->
       </div>
     </div>
     <div id="skills" class="sec2 sec">
