--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -11,7 +11,7 @@
   header {
     height: 65px;
     width: 100%;
-    background-color: white;
+    background-color: #222222;
     position: fixed;
     z-index: 1;
     border-bottom: .5px solid white;
@@ -118,8 +118,8 @@
   }
 
   .namepos h1 {
-    width: 80%;
-    font-size: 1.5em;
+    width: 60%;
+    font-size: 15px;
   }
 
   .namepos {
@@ -129,7 +129,7 @@
     flex-direction: column;
     position: relative;
     margin: auto;
-    background-color: black;
+    background-color: none;
     border-radius: 0;
     opacity: .9;
     text-align: center;
@@ -138,24 +138,24 @@
   #about {
     height: 60vh;
     width: 100%;
-    background-color: #404040;
+    background-color: #222222;
     color: black;
     display: flex;
     position: relative;
     flex-direction: column;
     background-attachment: fixed;
+    /*border: none;*/
     border-top: 2px solid white;
     border-bottom: 2px solid #222;
     text-align: center;
   }
 
   .aboutcon {
-    height: 75%;
-    width: 100%;
-    background: white;
+    background: #222222;
     font-size: 18px;
     text-align: center;
     display: flex;
+    /*border: none;*/
     flex-direction: column;
     justify-content: center;
     vertical-align: middle;
@@ -189,8 +189,8 @@
   #skills {
     height: 60vh;
     width: 100%;
-    background-color: white;
-    color: black;
+    background-color: #222222;
+    color: white;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -205,8 +205,8 @@
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    background-color: black;
-    border-radius: 15px;
+    background-color: #222222;
+    /*border-radius: 15px;*/
     opacity: .9;
     justify-content: center;
   }
@@ -243,12 +243,13 @@
   }
 
   #projects {
-    height: 80vh;
+    height: 100vh;
     width: 100%;
     position: relative;
-    background-image: url("./imgs/Mount_Timpanogos.jpg");
-    background-size: cover;
+    /*background-image: url("./imgs/Mount_Timpanogos.jpg");
+    background-size: cover;*/
     display: flex;
+    background-color: #222222;
     flex-direction: column;
     background-attachment: fixed;
   }
@@ -264,7 +265,7 @@
   #starwars {
     background-image: url("./imgs/starwars.png");
     background-size: cover;
-    border-radius: 15px 0 0 0;
+    /*border-radius: 15px 0 0 0;*/
   }
 
   #subaru {
@@ -275,22 +276,24 @@
   #rockshowZ {
     background-image: url("./imgs/rockshow.png");
     background-size: cover;
-    border-radius: 0 15px 0 0;
+    /*border-radius: 0 15px 0 0;*/
   }
 
   .projcon {
-    height: 600px;
+    height: 90%;
     width: 100%;
     margin: auto;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     position: relative;
+    justify-content: center;
     border-radius: 0 0 0 0;
-    background-color: black;
+    background-color: #222222;
   }
 
   .pronam {
-    font-size: 25px;
+    font-size: 12px;
   }
 
   .go2 {
@@ -299,9 +302,8 @@
   }
 
   .project {
-    height: 50vh;
-    width: 100%;
-    margin: auto;
+    height: 300px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     opacity: .9;
@@ -311,12 +313,13 @@
   }
 
   .project a {
-    height: 75%;
+    height: 200px;
     width: 100%;
+    color: inherit;
   }
 
   .projimg {
-    height: 100%;
+    height: 200px;
     width: 100%;
     background-size: 100%;
     background: cover;
@@ -352,7 +355,7 @@
     height: 100vh;
     width: 100%;
     position: relative;
-    background-color: white;
+    background-color: #222222;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -372,6 +375,14 @@
     opacity: .9;
     justify-content: center;
     border: none;
+  }
+
+  .contcon a {
+    color: white
+  }
+
+  .contcon a:hover {
+    color: white
   }
 
   .det {
