--- a/views/home.html
+++ b/views/home.html
@@ -1,9 +1,9 @@
 <body>
     <div id="top" class="sec">
       <div class="namepos">
-        <h1>Sergio Barker</h1>
+        <h2>Sergio Barker</h2>
         <h1><hr></h1>
-        <h1>Web Developer</h1>
+        <h3>Web Developer</h3>
       </div>
     </div>
     <div id="about" class="sec1 sec">
@@ -42,43 +42,67 @@
       <div class="projcon">
         <div id="starpro" class="project">
           <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
-            <div id="starwars" class="projimg"><div class="projcover starcov"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
-          <h1 class="pronam">Star Wars Planets</h1>
+            <div id="starwars" class="projimg">
+              <div class="projcover starcov">
+                <h1 class="go2">GO TO PROJECT</h1>
+              </div>
+            </div>
+          </a>
+          <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/">Star Wars Planets</a></h1>
         </div>
         <div id="subpro" class="project">
           <a href="http://138.68.60.37:8083">
-            <div id="subaru" class="projimg"><div class="projcover"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
-          <h1 class="pronam">Subaru Clone</h1>
+            <div id="subaru" class="projimg">
+              <div class="projcover">
+                <h1 class="go2">GO TO PROJECT</h1>
+              </div>
+            </div>
+          </a>
+          <h1 class="pronam"><a href="http://138.68.60.37:8083">Subaru Clone</a></h1>
         </div>
         <div id="rockpro" class="project">
           <a href="http://138.68.60.37:8081">
-            <div id="rockshowZ" class="projimg"><div class="projcover rockcov"><h1 class="go2">GO TO PROJECT</h1></div></div></a>
-          <h1 class="pronam">RockshowZ</h1>
+            <div id="rockshowZ" class="projimg">
+              <!-- <img src="./styles/imgs/metal_music.png"> -->
+              <div class="projcover rockcov">
+                <h1 class="go2">GO TO PROJECT</h1>
+              </div>
+            </div>
+          </a>
+          <h1 class="pronam"><a href="http://138.68.60.37:8081">RockshowZ</a></h1>
         </div>
       </div>
     </div>
     <div id="contact" class="sec4 sec">
-      <h1 class="titles" style="color: black;">Contact</h1>
+      <h1 class="titles">Contact</h1>
       <div class="contcon">
       <div id="phone" class="det">
-        <i class="fa fa-mobile" aria-hidden="true" style="font-size: 30px; color: grey"></i>
-        <h2>Phone</h2>
-      <p><a href="tel:+8013583800">801-358-3800</a></p>
+        <a href="tel:+8013583800">
+          <i class="fa fa-mobile" aria-hidden="true" style="font-size: 30px; color: grey"></i>
+          <h2>Phone</h2>
+          <p>801-358-3800</p>
+        </a>
       </div>
       <div id="email" class="det">
-        <i class="fa fa-envelope-o" aria-hidden="true" style="font-size: 30px; color: red"></i>
-      <h2>Email</h2>
-      <p><a href="mailto:sbrycebarker@gmail.com.com">sbrycebarker@gmail.com</a></p>
+        <a href="mailto:sbrycebarker@gmail.com.com">
+          <i class="fa fa-envelope-o" aria-hidden="true" style="font-size: 30px; color: red"></i>
+            <h2>Email</h2>
+            <p>sbrycebarker@gmail.com</p>
+        </a>
       </div>
       <div id="github" class="det">
+      <a href="https://github.com/sbrycebarker">
         <i class="fa fa-github" aria-hidden="true" style="font-size: 30px;"></i>
-      <h2>GitHub</h2>
-      <p><a href="https://github.com/sbrycebarker">Sbrycebarker</a></p>
+          <h2>GitHub</h2>
+            <p>Sbrycebarker</p>
+      </a>
       </div>
       <div id="linkedin" class="det">
+      <a href="https://www.linkedin.com/in/sergio-barker/">
         <i class="fa fa-linkedin-square" aria-hidden="true" style="font-size: 30px; color: #0073B1;"></i>
-      <h2>LinkedIn</h2>
-      <p><a href="https://www.linkedin.com/in/sergio-barker/">www.linkedin.com/in/sergio-barker</a></p>
+        <h2>LinkedIn</h2>
+        <p>www.linkedin.com/in/sergio-barker</p>
+      </a>
       </div>
       </div>
     </div>
