--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -7,26 +7,46 @@
     margin: 0;
     padding: 0;
   }
-
+  a {
+    color: white;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: none;
+  }
+  h2 a:hover,
+  focus {
+    text-decoration: none;
+  }
   header {
     height: 65px;
     width: 100%;
-    background-color: white;
+    background-color: #222222;
     position: fixed;
     z-index: 1;
-    border-bottom: .5px solid white;
+    border-bottom: 1px solid white;
     color: none;
     /*opacity: 0;*/
   }
 
-  a:hover {
-    color: white;
-    background-color: none;
+  h1 a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  h1 a:hover {
+    color: inherit;
+    background-color: inherit;
+    text-decoration: none;
+  }
+
+  a h2:hover {
+    text-decoration: none
   }
 
   .navbar-inverse {
-      background-color: #404040;
-      border-color: #080808;
+      background-color: #222222;
+      /*border-color: #080808;*/
   }
 
   .homecon {
@@ -65,6 +85,7 @@
   .home h1:hover {
     color: grey;
     transition-duration: .5s;
+    border-bottom: 2px solid white
   }
 
   .headeritems {
@@ -78,7 +99,6 @@
 
   .headeritem {
     height: 25px;
-    /*border-right: 1px solid white;*/
     width: 75px;
     position: relative;
     display: flex;
@@ -96,7 +116,8 @@
     font-weight: bold;
     color: white;
     text-align: center;
-    transition: color 2s
+    transition: color 2s;
+    text-decoration: none
   }
 
   .headeritem h2:hover {
@@ -104,6 +125,8 @@
     transition: color;
     transition-duration: .5s;
     margin: auto;
+    text-decoration: none;
+    border-bottom: 2px solid white;
   }
 
   #top {
@@ -114,7 +137,11 @@
     display: flex;
     background-attachment: fixed;
   }
-
+  .namepos h2 {
+    width: 80%;
+    margin: auto;
+    font-size: 35px;
+  }
   .namepos h1 {
     width: 80%;
     margin: auto;
@@ -127,7 +154,7 @@
     flex-direction: column;
     position: relative;
     margin: auto;
-    background-color: black;
+    background-color: none;
     border-radius: 0;
     opacity: .9;
     text-align: center;
@@ -136,8 +163,8 @@
   #about {
     height: 40vh;
     width: 100%;
-    background-color: #404040;
-    color: black;
+    background-color: #222222;
+    color: white;
     display: flex;
     position: relative;
     flex-direction: column;
@@ -149,11 +176,11 @@
 
   .aboutcon {
     height: 33%;
-    width: 100%;
-    background: white;
-    /*border-radius: 15px;*/
+    width: 500px;
+    background: #222222;
     font-size: 20px;
-    /*margin: auto;*/
+    border: solid white 2px;
+    margin: auto;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -164,8 +191,8 @@
   .aboutcon p {
     height: 20px;
     width: 450px;
-    top: -5px;
     margin: auto;
+    color: white;
     position: relative;
     text-align: center;
   }
@@ -189,8 +216,8 @@
   #skills {
     height: 55vh;
     width: 100%;
-    background-color: white;
-    color: black;
+    background-color: #222222;
+    color: white;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -205,8 +232,9 @@
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    background-color: black;
-    border-radius: 15px;
+    background-color: none;
+    /*border-radius: 15px;*/
+    border: 2px solid white;
     opacity: .9;
     justify-content: center;
   }
@@ -246,8 +274,9 @@
     height: 80vh;
     width: 100%;
     position: relative;
-    background-image: url("./imgs/Mount_Timpanogos.jpg");
+    /*background-image: url("./imgs/Mount_Timpanogos.jpg");*/
     background-size: cover;
+    background-color: #222222;
     display: flex;
     flex-direction: column;
     background-attachment: fixed;
@@ -258,13 +287,13 @@
   }
 
   #starpro {
-    border-radius: 15px 15px 0 0;
+    /*border-radius: 15px 15px 0 0;*/
   }
 
   #starwars {
     background-image: url("./imgs/starwars.png");
     background-size: cover;
-    border-radius: 15px 0 0 0;
+    /*border-radius: 15px 0 0 0;*/
   }
 
   #subaru {
@@ -274,23 +303,35 @@
 
   #rockshowZ {
     background-image: url("./imgs/rockshow.png");
-    background-size: cover;
-    border-radius: 0 15px 0 0;
+    background-size: 100% 200px;
+    /*border-radius: 0 15px 0 0;*/
   }
 
   .projcon {
-    height: 50vh;
-    width: 90%;
+    height: 600px;
+    width: 95%;
     margin: auto;
     display: flex;
     flex-direction: row;
     position: relative;
-    border-radius: 15px;
-    background-color: black;
+    /*border: 1px solid white;*/
+    /*border-radius: 15px;*/
+    /*background-color: black;*/
   }
 
   .pronam {
     font-size: 25px;
+    border: 2px solid white;
+    padding: 20px;
+    background-color: #222222;
+    transition-property: all;
+    transition-duration: 1s;
+    color: white
+  }
+
+  .pronam:hover {
+    background-color: white;
+    color: black;
   }
 
   .go2 {
@@ -299,13 +340,12 @@
   }
 
   .project {
-    height: 50vh;
-    width: 33.3%;
+    height: 400px;
+    width: 30%;
     margin: auto;
     display: flex;
     flex-direction: column;
     opacity: .9;
-    border-radius: 15px;
     color: white;
     position: relative;
   }
@@ -313,6 +353,10 @@
   .project a {
     height: 50%;
     width: 100%;
+  }
+
+  .project a:hover {
+    text-decoration: none
   }
 
   .projimg {
@@ -342,8 +386,8 @@
   }
 
   .starcov {
-    border-radius: 15px 0 0 0;
-    background-color: green
+    /*border-radius: 15px 0 0 0;*/
+    background-color: white
   }
 
   .projcover:hover {
@@ -354,15 +398,15 @@
 
 
   #contact {
-    height: 80vh;
+    height: 100vh;
     width: 100%;
     position: relative;
-    background-color: white;
+    background-color: #222222;
     background-size: cover;
     display: flex;
     flex-direction: column;
     background-attachment: fixed;
-    border-top: 2px solid black;
+    /*border-top: 2px solid white;*/
   }
 
   .contcon {
@@ -373,16 +417,16 @@
     display: flex;
     flex-direction: row;
     background-color: none;
-    border-radius: 15px;
     opacity: .9;
     justify-content: center;
-    color: black;
-    border: 1px solid black;
+    color: white;
+    border: 2px solid white;
   }
 
   .det {
     margin: auto;
     text-align: center;
+    color: white
   }
   .sec {
     /*border-bottom: 2px solid white;*/
