--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: JosifinSans-Regular;
+  src: url(JosefinSans-Regular);
+}
+
 @media only screen and (min-width: 1340px) {
 
   html {
@@ -9,15 +14,38 @@
     padding: 0;
   }
 
+  a {
+    color: white;
+    text-decoration: none;
+  }
+  a:hover {
+    text-decoration: none;
+  }
+
   header {
     height: 65px;
     width: 100%;
-    background-color: white;
+    background-color: #222222;
     position: fixed;
     z-index: 1;
     border-bottom: .5px solid white;
     color: none;
     /*opacity: 0;*/
+  }
+
+  h1 a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  h1 a:hover {
+    color: inherit;
+    background-color: inherit;
+    text-decoration: none;
+  }
+
+  a h2:hover {
+    text-decoration: none
   }
 
   a:hover {
@@ -39,6 +67,7 @@
     font-size: 50px;
     text-align: center;
     display: table-cell;
+    color: white;
     vertical-align: middle;
   }
 
@@ -117,42 +146,49 @@
   }
 
   .namepos h1 {
-    width: 80%;
+    height: auto;
+    width: 50%;
     margin: auto;
   }
 
   .namepos {
     height: 25%;
-    width: 100%;
+    width: 70%;
     display: flex;
     flex-direction: column;
     position: relative;
     margin: auto;
-    background-color: black;
+    background-color: none;
     border-radius: 0;
     opacity: .9;
     text-align: center;
+    /*border: 2px solid white*/
+  }
+
+  .namepos h2 {
+    font-size: 35px;
   }
 
   #about {
     height: 400px;
     width: 100%;
-    background-color: #404040;
-    color: black;
+    background-color: #222222;
+    color: white;
     display: flex;
     position: relative;
     flex-direction: column;
     background-attachment: fixed;
     border-top: 2px solid white;
-    border-bottom: 2px solid #222;
+    border-bottom: 2px solid white;
     text-align: center;
   }
 
   .aboutcon {
     height: 40%;
     width: 33%;
-    background: white;
-    border-radius: 15px;
+    /*background: white;*/
+    /*border-radius: 15px;*/
+    border: 2px solid white;
     font-size: 20px;
     margin: auto;
     text-align: center;
@@ -191,7 +227,7 @@
   #skills {
     height: 625px;
     width: 100%;
-    background-color: white;
+    background-color: #222222;
     color: black;
     background-size: cover;
     display: flex;
@@ -207,8 +243,8 @@
     margin: auto;
     display: flex;
     flex-wrap: wrap;
-    background-color: black;
-    border-radius: 15px;
+    background-color: #222222;
+    border: 2px solid white;
     opacity: .9;
     justify-content: center;
   }
@@ -248,7 +284,7 @@
     height: 700px;
     width: 100%;
     position: relative;
-    background-image: url("./imgs/Mount_Timpanogos.jpg");
+    background-color: #222222;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -265,7 +301,6 @@
   #starwars {
     background-image: url("./imgs/starwars.png");
     background-size: cover;
-    border-radius: 15px 0 0 0;
   }
 
   #subaru {
@@ -276,7 +311,6 @@
   #rockshowZ {
     background-image: url("./imgs/rockshow.png");
     background-size: cover;
-    border-radius: 0 15px 0 0;
   }
 
   .projcon {
@@ -286,12 +320,22 @@
     display: flex;
     flex-direction: row;
     position: relative;
-    border-radius: 15px;
-    background-color: black;
+    /*border-radius: 15px;*/
   }
 
   .pronam {
-    font-size: 2em;
+    font-size: 25px;
+    border: 2px solid white;
+    padding: 20px;
+    background-color: #222222;
+    transition-property: all;
+    transition-duration: 1s;
+    color: white
+  }
+
+  .pronam:hover {
+    background-color: white;
+    color: black;
   }
 
   .project {
@@ -299,6 +343,7 @@
     width: 33.3%;
     display: flex;
     flex-direction: column;
+    /*border: 2px solid white;*/
     /*background-color: black;*/
     opacity: .9;
     color: white;
@@ -309,12 +354,22 @@
     height: 300px;
     width: 100%;
   }
+  .project a:hover {
+    text-decoration: none
+  }
+
+  .project h1 {
+    border: 2px solid white;
+    padding: 10px;
+  }
 
   .projimg {
     height: 300px;
-    width: 100%;
+    width: 90%;
+    margin: auto;
     background-size: 100%;
     background: cover;
+    box-shadow: 5px 2px 2px  white;
   }
 
   .projcover {
@@ -328,14 +383,14 @@
     vertical-align: middle;
     transition: opacity 2s;
   }
-
+/*
   .starcov {
     border-radius: 15px 0 0 0;
   }
 
   .rockcov {
     border-radius: 0 15px 0 0;
-  }
+  }*/
 
   .projcover h1 {
     height: 100px;
@@ -353,12 +408,12 @@
     height: 80vh;
     width: 100%;
     position: relative;
-    background-color: white;
+    background-color: #222222;
     background-size: cover;
     display: flex;
     flex-direction: column;
     background-attachment: fixed;
-    border-top: 2px solid black;
+    border-top: 2px solid white;
   }
 
   .contcon {
@@ -369,12 +424,19 @@
     display: flex;
     flex-direction: row;
     background-color: none;
-    border-radius: 15px;
+    border: white 2px solid;
     opacity: .9;
     justify-content: center;
-    color: black
+    color: white
   }
 
+  .contcon a {
+    color: white
+  }
+
+  .contcon a:hover {
+    color: white
+  }
   .det {
     margin: auto;
     text-align: center;
