--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 1340px) {
+@media only screen and (max-width: 1400px) {
   html {
     height: 2000px;
     width: 100%;
@@ -148,8 +148,8 @@
   }
 
   .namepos {
-    height: 25%;
-    width: 100%;
+    height: 30%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -158,6 +158,7 @@
     border-radius: 0;
     opacity: .9;
     text-align: center;
+    border: 2px solid white;
   }
 
   #about {
@@ -175,8 +176,8 @@
   }
 
   .aboutcon {
-    height: 33%;
     width: 500px;
+    padding: 20px;
     background: #222222;
     font-size: 20px;
     border: solid white 2px;
@@ -421,6 +422,14 @@
     justify-content: center;
     color: white;
     border: 2px solid white;
+  }
+
+  .contcon a {
+    color: white
+  }
+
+  .contcon a:hover {
+    color: white
   }
 
   .det {
