--- a/views/home.html
+++ b/views/home.html
@@ -1,40 +1,110 @@
 <body>
     <div id="top" class="sec">
-      <h1>Sergio Barker</h1>
+      <div class="namepos">
+        <h2>Sergio Barker</h2>
+        <h1><hr></h1>
+        <h3>Web Developer</h3>
+      </div>
     </div>
     <div id="about" class="sec1 sec">
-      <h1>About</h1>
+      <h1 class="titles">About</h1>
+      <div class="aboutcon">
+      <p><a href="https://devmountain.com"><span>#DevMountain</span></a> graduate ready to get to work!</p>
+      <!-- <h1><hr></h1> -->
+      <p><a href="https://twitter.com/statemaryland?lang=en"><img src="styles/imgs/maryland.png" class="md"></a><a href="https://twitter.com/statemaryland?lang=en">@Maryland</a> born and raised</p>
+      <!-- <h1><hr></h1> -->
+      <p><a href="https://www.subaru.com"><span>#Subaru</span></a> Enthusiast! </p>
+
+      <!-- <p>Food lover <a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p> -->
+      </div>
     </div>
     <div id="skills" class="sec2 sec">
-      <h1>SKILLS</h1>
+      <h1 class="titles">SKILLS</h1>
       <div class="skillsbox">
-          <ul><i class="devicon-angularjs-plain-wordmark"></i></ul>
-          <ul><i class="devicon-atom-original-wordmark"></i></ul>
-          <ul><i class="devicon-express-original-wordmark"></i></ul>
-          <ul><i class="devicon-html5-plain-wordmark"></i></ul>
-          <ul><i class="devicon-javascript-plain"></i></ul>
-          <ul><i class="devicon-jquery-plain-wordmark"></i></ul>
-          <ul><i class="devicon-mongodb-plain-wordmark"></i></ul>
-          <ul><i class="devicon-postgresql-plain-wordmark"></i></ul>
-          <ul><i class="devicon-nodejs-plain-wordmark"></i></ul>
-          <ul><i class="devicon-css3-plain-wordmark"></i></ul>
-          <ul><i class="devicon-gulp-plain"></i></ul>
+          <ul><a href="https://angularjs.org/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-angularjs-plain-wordmark"></i></a></ul>
+          <ul><a href="https://atom.io/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-atom-original-wordmark"></i></a></ul>
+          <ul><a href="https://expressjs.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-express-original-wordmark"></i></a></ul>
+          <ul><a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-html5-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.javascript.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-javascript-plain"></i></a></ul>
+          <ul><a href="https://jquery.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-jquery-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.mongodb.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-mongodb-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.postgresql.org/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-postgresql-plain-wordmark"></i></a></ul>
+          <ul><a href="https://nodejs.org/en/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-nodejs-plain-wordmark"></i></a></ul>
+          <ul><a href="https://www.w3schools.com/css/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-css3-plain-wordmark"></i></a></ul>
+          <ul><a href="https://gulpjs.com/" style="text-decoration: none; background-color: none; color: white;"><i class="devicon-gulp-plain"></i></a></ul>
           <!-- <ul></ul>
           <ul></ul>
           <ul></ul> -->
       </div>
     </div>
     <div id="projects" class="sec3 sec">
-      <h1>Projects</h1>
+      <h1 class="titles">Projects</h1>
       <div class="projcon">
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
+        <div id="starpro" class="project">
+          <a href="https://sbrycebarker.github.io/Star-Wars-Planets/">
+            <div id="starwars" class="projimg">
+              <div class="projcover starcov">
+                <h1 class="go2">GO TO PROJECT</h1>
+              </div>
+            </div>
+          </a>
+          <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/">Star Wars Planets</a></h1>
+        </div>
+        <div id="subpro" class="project">
+          <a href="http://138.68.60.37:8083">
+            <div id="subaru" class="projimg">
+              <div class="projcover">
+                <h1 class="go2">GO TO PROJECT</h1>
+              </div>
+            </div>
+          </a>
+          <h1 class="pronam"><a href="http://138.68.60.37:8083">Subaru Clone</a></h1>
+        </div>
+        <div id="rockpro" class="project">
+          <a href="http://138.68.60.37:8081">
+            <div id="rockshowZ" class="projimg">
+              <!-- <img src="./styles/imgs/metal_music.png"> -->
+              <div class="projcover rockcov">
+                <h1 class="go2">GO TO PROJECT</h1>
+              </div>
+            </div>
+          </a>
+          <h1 class="pronam"><a href="http://138.68.60.37:8081">RockshowZ</a></h1>
+        </div>
       </div>
     </div>
-    <div id="education" class="sec4 sec">
-      <h1>Education</h1>
+    <div id="contact" class="sec4 sec">
+      <h1 class="titles">Contact</h1>
+      <div class="contcon">
+      <div id="phone" class="det">
+        <a href="tel:+8013583800">
+          <i class="fa fa-mobile" aria-hidden="true" style="font-size: 30px; color: grey"></i>
+          <h2>Phone</h2>
+          <p>801-358-3800</p>
+        </a>
+      </div>
+      <div id="email" class="det">
+        <a href="mailto:sbrycebarker@gmail.com.com">
+          <i class="fa fa-envelope-o" aria-hidden="true" style="font-size: 30px; color: red"></i>
+            <h2>Email</h2>
+            <p>sbrycebarker@gmail.com</p>
+        </a>
+      </div>
+      <div id="github" class="det">
+      <a href="https://github.com/sbrycebarker">
+        <i class="fa fa-github" aria-hidden="true" style="font-size: 30px;"></i>
+          <h2>GitHub</h2>
+            <p>Sbrycebarker</p>
+      </a>
+      </div>
+      <div id="linkedin" class="det">
+      <a href="https://www.linkedin.com/in/sergio-barker/">
+        <i class="fa fa-linkedin-square" aria-hidden="true" style="font-size: 30px; color: #0073B1;"></i>
+        <h2>LinkedIn</h2>
+        <p>www.linkedin.com/in/sergio-barker</p>
+      </a>
+      </div>
+      </div>
     </div>
 
-  </div>
 </body>
