--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 1400px) {
+@media only screen and (max-width: 1400px) and (min-width: 650px) {
   html {
     height: 2000px;
     width: 100%;
@@ -132,7 +132,7 @@
   #top {
     height: 80vh;
     width: 100%;
-    background-image: url("./imgs/timp1.jpg");
+    background-image: url("./imgs/wood.jpg");
     background-size: cover;
     display: flex;
     background-attachment: fixed;
@@ -158,7 +158,6 @@
     border-radius: 0;
     opacity: .9;
     text-align: center;
-    border: 2px solid white;
   }
 
   #about {
@@ -177,6 +176,7 @@
 
   .aboutcon {
     width: 500px;
+    height: auto;
     padding: 20px;
     background: #222222;
     font-size: 20px;
