--- a/styles/laptop.css
+++ b/styles/laptop.css
@@ -132,7 +132,7 @@
   #top {
     height: 80vh;
     width: 100%;
-    background-image: url("./imgs/wood.jpg");
+    background-image: url("./imgs/darkwood.jpg");
     background-size: cover;
     display: flex;
     background-attachment: fixed;
@@ -192,7 +192,7 @@
   .aboutcon p {
     height: 20px;
     width: 450px;
-    margin: auto;
+    margin: 15px auto;
     color: white;
     position: relative;
     text-align: center;
@@ -246,7 +246,7 @@
     display: flex;
     color: white;
     flex-direction: row;
-    margin: 20px 15px;
+    margin: 20px 25px;
   }
 
   .skillsbox ul:hover {
@@ -365,6 +365,7 @@
     width: 100%;
     background-size: 100%;
     background: cover;
+    box-shadow: 5px 2px 2px  white;
   }
 
   .projcover {
