--- a/styles/styles.css
+++ b/styles/styles.css
@@ -142,7 +142,7 @@
   #top {
     height: 725px;
     width: 100%;
-    background-image: url("./imgs/wood.jpg");
+    background-image: url("./imgs/darkwood.jpg");
     background-size: cover;
     display: flex;
     background-attachment: fixed;
@@ -198,7 +198,7 @@
   }
 
   .aboutcon p {
-    height: 20px;
+    height: 40px;
     width: 450px;
     top: -5px;
     margin: 50px auto;
