--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
       <!-- <h1><hr></h1> -->
       <p><a href="https://www.subaru.com"><span>#Subaru</span></a> Enthusiast! </p>
 
-      <!-- <p>Food lover <a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p> -->
+      <p>Food lover with who loves to cook at home<a href="https://www.instagram.com/sergiobbarker/?hl=en"><span>#instagram</span></a></p>
       </div>
     </div>
     <div id="skills" class="sec2 sec">
@@ -51,17 +51,17 @@
           <h1 class="pronam"><a href="https://sbrycebarker.github.io/Star-Wars-Planets/">Star Wars Planets</a></h1>
         </div>
         <div id="subpro" class="project">
-          <a href="http://138.68.60.37:8083">
+          <a href="http://barkersubaru.com">
             <div id="subaru" class="projimg">
               <div class="projcover">
                 <h1 class="go2">GO TO PROJECT</h1>
               </div>
             </div>
           </a>
-          <h1 class="pronam"><a href="http://138.68.60.37:8083">Subaru Clone</a></h1>
+          <h1 class="pronam"><a href="http://barkersubaru.com">Subaru Clone</a></h1>
         </div>
         <div id="rockpro" class="project">
-          <a href="http://138.68.60.37:8081">
+          <a href="http://rockshowz.info">
             <div id="rockshowZ" class="projimg">
               <!-- <img src="./styles/imgs/metal_music.png"> -->
               <div class="projcover rockcov">
@@ -69,7 +69,7 @@
               </div>
             </div>
           </a>
-          <h1 class="pronam"><a href="http://138.68.60.37:8081">RockshowZ</a></h1>
+          <h1 class="pronam"><a href="http://rockshowz.info">RockshowZ</a></h1>
         </div>
       </div>
     </div>
