--- a/views/home.html
+++ b/views/home.html
@@ -71,6 +71,17 @@
           </a>
           <h1 class="pronam"><a href="http://rockshowz.info">RockshowZ</a></h1>
         </div>
+        <div id="todopro" class="project">
+          <a href="http://138.68.60.37:8084/#!/">
+            <div id="todoapp" class="projimg">
+              <!-- <img src="./styles/imgs/metal_music.png"> -->
+              <div class="projcover rockcov">
+                <h1 class="go2">GO TO PROJECT</h1>
+              </div>
+            </div>
+          </a>
+          <h1 class="pronam"><a href="http://138.68.60.37:8084/#!/">To Do App</a></h1>
+        </div>
       </div>
     </div>
     <div id="contact" class="sec4 sec">
